--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
 ---
 permalink: /404.html
 layout: default
----
 
+---
 <style type="text/css" media="screen">
   .container {
     margin: 10px auto;
@@ -20,6 +20,6 @@ layout: default
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Page introuvable :(</strong></p>
+  <p>Cette page n'existe pas. <a href="..">Retrouver le meilleur du CDB ici</a></p>
 </div>
