--- a/404.html
+++ b/404.html
@@ -21,5 +21,5 @@ layout: default
   <h1>404</h1>
 
   <p><strong>Page introuvable :(</strong></p>
-  <p>Cette page n'existe pas. <a href="..">Retrouver le meilleur du CDB ici</a></p>
+  <p>Cette page n'existe pas. <a href="./">Retrouver le meilleur du CDB ici</a></p>
 </div>
