Stastic admin install

--- a/admin/index.html
+++ b/admin/index.html
@@ -13,6 +13,7 @@
   <title>Stastic Jekyll Editor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://editor.stastic.net/admin.css">
+  <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="9c68de1f-7c54-4558-835f-c8ecdab486f1";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 </head>
 <body>
 	<!-- Google Tag Manager (noscript) -->
@@ -32,6 +33,7 @@
     }
   </script>
   <script src="https://editor.stastic.net/admin.js"></script>
+  <!--
   <script>
     ((window.gitter = {}).chat = {}).options = {
       room: 'internet-de-france/Stastic',
@@ -39,5 +41,6 @@
     };
   </script>
   <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
+  -->
 </body>
 </html>
